--- a/game.html
+++ b/game.html
@@ -9,19 +9,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    <header class="entete" role="header">
+    <header id="entete" role="header">
         C'est votre Tour !
     </header>
 
     <div id="content">
         <div id="right_side">
             <div id="player1">
-                Pseudo joueur1 <br>
-                Score: 0 <br>
+                Joueur Rouge <br>
+                Score : <span id="red">0/4</span>
             </div>
             <div id="player2">
-                Pseudo joueur2 <br>
-                Score: 0 <br>
+                Joueur Jaune <br>
+                Score : <span id="yellow">0/4</span>
             </div>
         </div>
         <div id="left_side">
