corrections de bug

--- a/game.html
+++ b/game.html
@@ -15,13 +15,26 @@
 
     <div id="content">
         <div id="right_side">
+            <br>
+            <div id="score">
+                TABLE DES SCORES
+            </div>
+            <div id="scoretext"> <span style="font-family:'Times New Roman', Times, serif">
+                Le premier joueur à faire revenir 4 pièces gagne la partie 
+            </div>
             <div id="player1">
                 Joueur Rouge <br>
-                Score : <span id="red">0/4</span>
+                <span class="dot" id="red1"></span>
+                <span class="dot" id="red2"></span>
+                <span class="dot" id="red3"></span>
+                <span class="dot" id="red4"></span>
             </div>
             <div id="player2">
                 Joueur Jaune <br>
-                Score : <span id="yellow">0/4</span>
+                <span class="dot" id="yellow1"></span>
+                <span class="dot" id="yellow2"></span>
+                <span class="dot" id="yellow3"></span>
+                <span class="dot" id="yellow4"></span>
             </div>
         </div>
         <div id="left_side">
