--- a/game.html
+++ b/game.html
@@ -51,6 +51,11 @@
                 <div class="piece yellow" id="piece_yellow5"></div>
             </div>
         </div>
+        <audio controls>
+            <source src="audio/musicmenu.mp3" type="audio/mp3" />
+            Votre navigateur ne prend pas en charge cet élement audio.
+        </audio>
+
     </div>
     <script src="script.js" defer></script>
 </body>
