--- a/game.html
+++ b/game.html
@@ -50,6 +50,14 @@
                 <div class="piece yellow" id="piece_yellow4"></div>
                 <div class="piece yellow" id="piece_yellow5"></div>
             </div>
+            <div class='boardfin'>
+                <button class="rejouer" onclick="window.location.href='game.html';">
+                    Rejouer
+                </button>
+                <button class="menu" onclick="window.location.href='index.html';">
+                    Menu Principal
+                </button>
+            </div>
         </div>
         <audio controls>
             <source src="audio/musicmenu.mp3" type="audio/mp3" />
