up affichage boardfin (centré)

--- a/game.html
+++ b/game.html
@@ -50,11 +50,11 @@
                 <div class="piece yellow" id="piece_yellow4"></div>
                 <div class="piece yellow" id="piece_yellow5"></div>
             </div>
-            <div class='boardfin'>
+            <div class='boardfin' id="boardfin">
                 <button class="rejouer" onclick="window.location.href='game.html';">
                     Rejouer
                 </button>
-                <button class="menu" onclick="window.location.href='index.html';">
+                <button class="return_menu" onclick="window.location.href='index.html';">
                     Menu Principal
                 </button>
             </div>
