--- a/client/rule.html
+++ b/client/rule.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agilité - Règle de Squadro</title>
-    <link rel="stylesheet" href="css/rule.css">
+    <link rel="stylesheet" href="/css/rule.css">
 </head>
 <body>
     <header class="entete" role="header">
