--- a/client/index.html
+++ b/client/index.html
@@ -28,19 +28,24 @@
         <div id="join_container">
             <input type="text" id="code" name="code" placeholder="Entrez le code..." maxlength="4" minlength="4">
             <span class="erreur_code" id="erreur_code">Le code entré ne correspond à aucune partie !</span>
-            <button type="submit" id="popup_submit" class="popup_submit">Rejoindre</button>
+            <button type="submit" id="btn_join" class="popup_submit">Rejoindre</button>
             <button class="local" onclick="window.location.href='index.html';">
                 Retour
             </button>
         </div>
         <div id="create_container">
             <div class="select_team">
-                Choissisez une couleur 
-                <div class=redTeam> ROUGE </div>
-                <div class=yellowTeam> JAUNE </div>
+                <div class="choiceTeam">Choissisez une couleur </div>
+                <div class="selection">
+                    <div class=redTeam> ROUGE </div>
+                    <div class=yellowTeam> JAUNE </div>
+                </div>
             </div>
-            <span id="code_generated"></span>
-            <div class=creation>Créer la partie</div>
+            <div id="code_generated"></div>
+            <button type="submit" id=btn_create class="popup_submit">Créer</button>
+            <button class="local" onclick="window.location.href='index.html';">
+                Retour
+            </button>
         </div>
     </div>
     <script src="index.js" defer></script>
