Added back to menu button on local mode

--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
             <div class=creation>Créer la partie</div>
         </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="index.js" defer></script>
 </body>
 </html>
