--- a/client/game.html
+++ b/client/game.html
@@ -9,9 +9,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+
     <header id="entete" role="header">
         C'est votre Tour !
     </header>
+    <button class="rejouer" id='main-menu-button' onclick="window.location.href='index.html';">
+        Retour au menu principal
+    </button>
 
     <div id="content">
         <div id="right_side">
