up menu create game

--- a/client/index.html
+++ b/client/index.html
@@ -37,8 +37,8 @@
             <div class="select_team">
                 <div class="choiceTeam">Choissisez une couleur </div>
                 <div class="selection">
-                    <div class=redTeam> ROUGE </div>
-                    <div class=yellowTeam> JAUNE </div>
+                    <input type="radio" name="r" id=redTeam value="rouge" checked> ROUGE
+                    <input type="radio" name="r" id=yellowTeam value="jaune"> JAUNE
                 </div>
             </div>
             <div id="code_generated"></div>
