UI Design update

--- a/client/game.html
+++ b/client/game.html
@@ -26,14 +26,14 @@
                 Le premier joueur à faire revenir 4 pièces gagne la partie 
             </div>
             <div id="player1">
-                Joueur Rouge <br>
+                Joueur <span id='red_player_title'>Rouge</span> <br>
                 <span class="dot" id="red1"></span>
                 <span class="dot" id="red2"></span>
                 <span class="dot" id="red3"></span>
                 <span class="dot" id="red4"></span>
             </div>
             <div id="player2">
-                Joueur Jaune <br>
+                Joueur <span id='yellow_player_title'>Jaune</span> <br>
                 <span class="dot" id="yellow1"></span>
                 <span class="dot" id="yellow2"></span>
                 <span class="dot" id="yellow3"></span>
