--- a/client/game.html
+++ b/client/game.html
@@ -24,7 +24,7 @@
             </div>
             <div id="scoretext"> <span style="font-family:'Times New Roman', Times, serif">
                 Le premier joueur à faire revenir 4 pièces gagne la partie 
-            </div>
+            </span></div>
             <div id="player1">
                 Joueur <span id='red_player_title'>Rouge</span> <br>
                 <span class="dot" id="red1"></span>
@@ -38,6 +38,12 @@
                 <span class="dot" id="yellow2"></span>
                 <span class="dot" id="yellow3"></span>
                 <span class="dot" id="yellow4"></span>
+            </div>
+            <div class="chatmessage">
+                <ul id="messages"></ul>
+                <form id="form" action="">
+                    <input id="envoyer" autocomplete="off" /><button>Envoyer</button>
+                </form>
             </div>
         </div>
         <div id="left_side">
