--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agilité - Menu Squadro</title>
     <link rel="stylesheet" href="css/index.css">
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -64,7 +65,7 @@
                 </div>
                 <div id="scoretext"> <span style="font-family:'Times New Roman', Times, serif">
                     Le premier joueur à faire revenir 4 pièces gagne la partie 
-                </div>
+                </span></div>
                 <div id="player1">
                     Joueur Rouge <br>
                     <span class="dot" id="red1"></span>
@@ -79,6 +80,12 @@
                     <span class="dot" id="yellow3"></span>
                     <span class="dot" id="yellow4"></span>
                 </div>
+                <section id="chatmessage2">
+                    <ul id="messages2"></ul>
+                    <form action="">
+                        <input id="m" autocomplete="off" /><button>Send</button>
+                    </form>
+                </section>
             </div>
             <div id="left_side">
                 <div class="board">
