--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agilité - Menu Squadro</title>
     <link rel="stylesheet" href="css/index.css">
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -80,12 +80,12 @@
                     <span class="dot" id="yellow3"></span>
                     <span class="dot" id="yellow4"></span>
                 </div>
-                <section id="chatmessage2">
-                    <ul id="messages2"></ul>
+                <div id="chatmessage2">
+                    <ul id="messages2">jik</ul>
                     <form action="">
                         <input id="m" autocomplete="off" /><button>Send</button>
                     </form>
-                </section>
+                </div>
             </div>
             <div id="left_side">
                 <div class="board">
@@ -122,6 +122,7 @@
     
         </div>
     </div>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js" defer></script>
 </body>
