--- a/client/rule.html
+++ b/client/rule.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agilité - Règle de Squadro</title>
+    <title>Agilité - Règles de Squadro</title>
     <link rel="stylesheet" href="/css/rule.css">
 </head>
 <body>
-    <header class="entete" role="header">
-        Agilité
-    </header>
     <div class="container">
-        <h1>Règle du jeu</h1>
+        <div class ="container_title"><button class="rejouer" id='main-menu-button' onclick="window.location.href='index.html';">
+            Retour au menu principal
+        </button><h1>Règles du jeu</h1></div>
         <h3>L'objectif</h3>
         <p>
             Les joueurs disposent chacun de 5 pièces de même couleur. À chaque tour ils vont
