--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,8 @@
         </button>
         <div id="join_container">
             <input type="text" id="code" name="code" placeholder="Entrez le code..." maxlength="4" minlength="4">
-            <span class="erreur_code" id="erreur_code">Le code entré ne correspond à aucune partie !</span>
+            <span class="erreur_code" id="erreur_codePleine">La partie est pleine !</span>
+            <span class="erreur_code" id="erreur_codeExiste">Le code entré ne correspond à aucune partie !</span>
             <button type="submit" id="btn_join" class="popup_submit">Rejoindre</button>
             <button class="local" onclick="window.location.href='index.html';">
                 Retour
