Style audio change

--- a/client/game.html
+++ b/client/game.html
@@ -67,8 +67,8 @@
             Votre navigateur ne prend pas en charge cet élement audio.
         </audio>
         <div id="audio"> 
-            <button id='playpausebutton' onclick="playpause()"></button> 
-            <button id='muteunmutebutton'onclick="muteunmute()"></button> 
+            <button class='audiobutton' id='playpausebutton' onclick="playpause()"></button> 
+            <button class='audiobutton' id='muteunmutebutton'onclick="muteunmute()"></button> 
             <input type="range" id="volumeslider" min="0" max="100" value="50" step="1">
             <script>document.getElementById('playeraudio').volume=50/1000</script>
         </div>
