add theme menu music

--- a/client/game.html
+++ b/client/game.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <audio id='playeraudio' loop>
-            <source src="audio/musicmenu.mp3" type="audio/mp3" />
+            <source src="audio/musicingame.mp3" type="audio/mp3" />
             Votre navigateur ne prend pas en charge cet élement audio.
         </audio>
         <div id="audio"> 
