--- a/client/game.html
+++ b/client/game.html
@@ -70,8 +70,10 @@
         Votre navigateur ne prend pas en charge cet élement audio.
     </audio>
     <div id="audio"> 
+        <div id="audio-buttons-container-menu">
         <button class='audiobutton' id='playpausebutton' onclick="playpause()"></button> 
         <button class='audiobutton' id='muteunmutebutton'onclick="muteunmute()"></button> 
+        </div>
         <input type="range" id="volumeslider" min="0" max="100" value="50" step="1">
         <script>document.getElementById('playeraudio').volume=50/1000</script>
     </div>
