--- a/client/index.html
+++ b/client/index.html
@@ -55,8 +55,10 @@
     </audio>
     <script>document.getElementById("playeraudiomenu").play();</script>
     <div id="audio"> 
+        <div id="audio-buttons-container-menu">
         <button class='audiobutton' id='playpausebuttonmenu' onclick="playpausemenu()"></button> 
-        <button class='audiobutton' id='muteunmutebuttonmenu'onclick="muteunmutemenu()"></button> 
+        <button class='audiobutton' id='muteunmutebuttonmenu'onclick="muteunmutemenu()"></button>
+        </div> 
         <input type="range" id="volumeslidermenu" min="0" max="100" value="50" step="1">
         <script>document.getElementById('playeraudiomenu').volume=50/1000</script>
     </div>
@@ -129,8 +131,10 @@
             Votre navigateur ne prend pas en charge cet élement audio.
         </audio>
         <div id="audiogame"> 
+            <div id="audio-buttons-container">
             <button class='audiobutton' id='playpausebutton' onclick="playpause()"></button> 
-            <button class='audiobutton' id='muteunmutebutton'onclick="muteunmute()"></button> 
+            <button class='audiobutton' id='muteunmutebutton'onclick="muteunmute()"></button>
+            </div>
             <input type="range" id="volumeslider" min="0" max="100" value="50" step="1">
             <script>document.getElementById('playeraudio').volume=50/1000</script>
         </div>
